# artixinstall

./: DESIGN.md  README.md  README.md.save  __init__.py  __main__.py  base.py  config.py  default_profiles.py  dinit.py  guided.py  init_menu.py  installer.py  network.py  openrc.py  pacman_conf.py  pyproject.toml  runit.py  s6.py  test_init_backends.py
mnt/user-data/outputs/artixinstall/artixinstall/: __init__.py
