[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "artixinstall"
version = "0.1.0-mvp"
description = "Artix Linux installer – a fork of archinstall adapted for Artix init systems"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "artixinstall contributors" }]
keywords = ["artix", "linux", "installer", "openrc", "runit", "s6", "dinit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Installation/Setup",
]
dependencies = ["archinstall>=2.8,<3.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.3"]

[project.scripts]
artixinstall = "artixinstall.scripts.guided:main"

[project.urls]
Homepage   = "https://github.com/your-org/artixinstall"
Repository = "https://github.com/your-org/artixinstall"

[tool.setuptools.packages.find]
where = ["."]
include = ["artixinstall*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "W", "I", "UP", "B"]
ignore         = ["E501"]
